# hobania_serverbrowser

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.gitlab/CI/: build.gitlab-ci.yml  check.gitlab-ci.yml  publish.gitlab-ci.yml
.gitlab/issue_templates/: New Server.md
api/: Cargo.toml  README.md
api/examples/v1/: example_server_list.json  example_server_list.ron  schema.json  schemaj.json
api/src/: lib.rs
server/: Cargo.toml  servers.ron
server/src/: gameservers.rs  main.rs  server.rs
src/: gameservers.rs  metrics.rs  server.rs
