[package]
name = "serverbrowser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version = "0.8.10", features = ["chrono"] }
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"]}
axum = { version = "0.5.13" }
thiserror = "1.0.32"
futures = "0.3.21"
isocountry = "0.3.2"
lazy_static = "1.4.0"

# tracing
prometheus = "0.13.1"
chrono = { version = "0.4.20", features = ["serde"] }
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }