[package]
name = "veloren-serverbrowser-api"
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
homepage = "https://veloren.net"
repository = "https://gitlab.com/veloren/serverbrowser"
documentation = "https://docs.rs/veloren-serverbrowser-api"
description = "the format of the veloren serverbrowser, so it can be used by other tools"
keywords = ["veloren"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
country-parser = "0.1"

[dev-dependencies]
ron = "0.8"
serde_json = "1.0.85"
